--- a/app/views/folder-notes/folder-notes.component.html
+++ b/app/views/folder-notes/folder-notes.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div *ngIf="folder" class="card card-block note-card">
     <h4 class="card-title">
-      <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#myModal">
+      <button *ngIf="demoNotes < 5" type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#myModal">
         <span style="color:black"><i class="fa fa-sticky-note" aria-hidden="true"></i></span>
       </button> {{folder.name}}
     </h4>
@@ -55,7 +55,7 @@
           <textarea class="form-control new-note" placeholder="Details" [(ngModel)]="newNote.details" name="new-note-details" maxlength="100" rows="3" required></textarea>  
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-primary" [disabled]="!newNoteForm.form.valid">Add</button>
+          <button type="submit" class="btn btn-primary" [disabled]="!newNoteForm.form.valid || demoNotes > 4">Add</button>
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </form>
